main.tf
data "aws_ami" "amazon_linux" {
    most_recent = true
    owners = ["amazon"]

    filter {
        name = "name"
        values = ["a12023-ami-*"]
    }
}

resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"

    tags = {
        Name = "project1-vpc"
    }
}

resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = true
    tags = {
        Name = "project1-public-subnet"
    }
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id
    tags = {
        Name = "project1-igw"
    }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
    tags = {
        Name = "project1-public-rt
    }
}

resource "aws_route_table_association" "public" {
    subnet_id = aws_subnet.public.id
    reoute_table_id = aws_route_table.public.id
}

resource "aws_security_group" "web" {
    name = "web-sg"
    vpc_id = aws_vpc.mian.id
    ingress {
        description = "HTTP"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = [
            "${var.my_ip}/32"
        ]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = [
            "0.0.0.0/0"
        ]
    }
    tags = {
        Name = "project1-web-sg"
    }
}

resource "aws_instance" "webserver" {
    ami = data.aws_ami.amazon_linux.id
    instance_type = "t2.micro"
    subnet_id = aws_subnet.public.id
    vpc_security_group_ids = [
        aws_security_group.web.id
    ]

    user_data = file("userData.sh)
    tags = {
        Name = "project1-webserver"
    }
}
